Fixed overflow on header in mobile

--- a/about/styles.css
+++ b/about/styles.css
@@ -57,6 +57,7 @@ body {
 }
 
 header {
+    min-height: 4rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
